--- a/src/ic-cdk/Cargo.toml
+++ b/src/ic-cdk/Cargo.toml
@@ -13,7 +13,8 @@ keywords = ["internet-computer", "types", "dfinity", "canister", "cdk"]
 include = ["src", "Cargo.toml", "LICENSE", "README.md"]
 
 [dependencies]
-candid = "0.6.19"
+# candid = "0.6.19"
+candid = { git = "https://github.com/lastmjs/candid", branch = "sudograph" }
 cfg-if = "0.1.10"
 ic-types = "0.1.1"
 serde = "1.0.110"
