--- a/src/ic-cdk/Cargo.toml
+++ b/src/ic-cdk/Cargo.toml
@@ -14,7 +14,7 @@ include = ["src", "Cargo.toml", "LICENSE", "README.md"]
 
 [dependencies]
 # candid = "0.6.19"
-candid = { git = "https://github.com/lastmjs/candid", branch = "sudograph" }
+candid = { git = "https://github.com/lastmjs/candid", branch = "candid-path-helper-attribute" }
 cfg-if = "0.1.10"
 ic-types = "0.1.1"
 serde = "1.0.110"
